--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
