Chore: add use media lib

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-media": "^1.5.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
