--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.400.0",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
