--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.400.0",
